@@ -13,11 +13,15 @@ if GCONF_SCHEMAS_INSTALL
 	fi
 endif
 
+cssdir = $(pkgdatadir)
+css_DATA = style.css
+
 prefsdir = $(pkgdatadir)
 prefs_DATA = prefs.js
 
 EXTRA_DIST = \
 	$(schema_in_files)	\
+	$(css_DATA)		\
 	$(prefs_DATA)
 
 CLEANFILES = $(schema_DATA)
