@@ -1,0 +1,3 @@
+* {
+  overflow:  -moz-scrollbars-none !important;
+}
